# SCAVI

./: .dockerignore  .env.example  .gitignore  ADMIN_AUTH.md  ADMIN_SETUP.md  AUTH_SYSTEM.md  AUTO_INIT.md  DATABASE_CONFIG.md  DATABASE_SCHEMA.md  DEPLOY.md  Dockerfile  HOT_RELOAD.md  INTEGRATION.md  OSS_CONFIG.md  POETRY_GUIDE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  ROUTING.md  ROUTING_FIX.md  build.sh  create_admin.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_oss_urls.py  init_default_slides.py  init_default_tags.py  main.py.old  migrate_database.py  pyproject.toml  requirements.txt  server_init.sh  setup_poetry.sh  start.sh  test_oss_upload.py  watch_frontend.py
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: admin.py  auth.py  proxy.py  routes.py
app/core/: config.py  database.py  init_db.py  oss_config.py  oss_service.py
app/models/: __init__.py  admin.py  base.py  catalog.py  content.py
frontend/: DATA_FLOW.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.tsx  routes.tsx
frontend/src/app/components/: FactoryContact.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ProductDetail.tsx  ProductListPage.tsx  Products.tsx
frontend/src/app/context/: AuthContext.tsx  DataContext.tsx
frontend/src/app/pages/: AdminDashboardPage.tsx  AdminLoginPage.tsx  CategoryPage.tsx  HomePage.tsx  ProductDetailPage.tsx  (+1 more)
nginx/: README.md  nginx.conf
static/: index.html
static/assets/: index-B04uJFoj.js  index-CP_vtMLU.js  index-CXp6lRWj.js  index-Dlx8EASx.css  index-Dv0u3_G6.css
(+14 files in other folders)
